--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,6 @@
 ---
+import '../styles/global.css';
+
 const pageTitle = "Home";
 ---
 
@@ -11,6 +13,10 @@ const pageTitle = "Home";
 		<title>{pageTitle}</title>
 	</head>
 	<body>
+		<a href="/">Home</a>
+        <a href="/about/">About</a>
+        <a href="/blog/">Blog</a>
+		
 		<h1>{pageTitle}</h1>
 	</body>
 </html>
