fixing lowercase issue

--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -1,5 +1,5 @@
 ---
-import Hamburger from './Hamburger.astro';
+import Hamburger from './hamburger.astro';
 import Navigation from './navigation.astro';
 ---
 
