featured post implementation

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -17,6 +17,10 @@ import { SITE } from "@consts";
         <span>
           {`/`}
         </span>
+        <Link href="/categories">categories</Link>
+        <span>
+          {`/`}
+        </span>
         <Link href="/tags">tags</Link>
         <span>
           {`/`}
