--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from "@layouts/Layout.astro";
 import Container from "@components/Container.astro";
-import { SITE, HOME, SOCIALS } from "@consts";
+import { SITE, HOME, SOCIALS, BLOG } from "@consts";
 import ArrowCard from "@components/ArrowCard.astro";
 import Link from "@components/Link.astro";
 import { getCollection } from "astro:content";
@@ -10,6 +10,11 @@ import type { CollectionEntry } from "astro:content";
 const blog = (await getCollection("blog"))
   .filter((post) => !post.data.draft)
   .sort((a, b) => b.data.date.valueOf() - a.data.date.valueOf());
+
+const featuredPosts = (await getCollection("blog"))
+  .filter((post) => !post.data.draft && post.data.featured)
+  .sort((a, b) => b.data.date.valueOf() - a.data.date.valueOf())
+  .slice(0, SITE.NUM_POSTS_ON_HOMEPAGE);
 
 const projects: CollectionEntry<"projects">[] = (
   await getCollection("projects")
@@ -68,21 +73,40 @@ const projects: CollectionEntry<"projects">[] = (
         </section>
 
         <section class="animate space-y-6">
-          <div class="flex flex-wrap items-center justify-between gap-y-2">
-            <h2 class="font-semibold text-black dark:text-white">
-              Latest posts
-            </h2>
-            <Link href="/blog"> See all posts </Link>
-          </div>
-          <ul class="not-prose flex flex-col gap-4">
-            {
-              blog.map((post) => (
-                <li>
-                  <ArrowCard entry={post} />
-                </li>
-              ))
-            }
-          </ul>
+          {featuredPosts.length > 0 && (
+            <section class="space-y-6">
+              <div class="flex flex-wrap items-center justify-between gap-y-2">
+                <h2 class="font-semibold text-black dark:text-white">
+                  {BLOG.FEATURED?.TITLE || "Featured Posts"}
+                </h2>
+                <Link href="/blog/featured"> See all featured posts </Link>
+              </div>
+              <ul class="not-prose flex flex-col gap-4">
+                {featuredPosts.map((post) => (
+                  <li>
+                    <ArrowCard entry={post} />
+                  </li>
+                ))}
+              </ul>
+            </section>
+          )}
+          {blog.length > 0 && (
+            <section class="space-y-6">
+              <div class="flex flex-wrap items-center justify-between gap-y-2">
+                <h2 class="font-semibold text-black dark:text-white">
+                  Latest Posts
+                </h2>
+                <Link href="/blog"> See all posts </Link>
+              </div>
+              <ul class="not-prose flex flex-col gap-4">
+                {blog.map((post) => (
+                  <li>
+                    <ArrowCard entry={post} />
+                  </li>
+                ))}
+              </ul>
+            </section>
+          )}
         </section>
 
         <section class="animate space-y-4">
