--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,7 +18,7 @@ const blog: CollectionEntry<"blog">[] = (await getCollection("blog"))
   <Container>
     <aside data-pagefind-ignore>
       <h1 class="font-semibold text-black dark:text-white">
-        Introducing Astro Micro 🔬
+        Introducing Astro Micro 📝
       </h1>
       <div class="space-y-16">
         <section>
