--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,14 +9,10 @@ import { SITE } from "@consts";
     <div class="flex flex-wrap justify-between gap-y-2">
       <Link href="/" underline={false}>
         <div class="font-semibold">
-          {SITE.TITLE}&nbsp;🔬
+          {SITE.TITLE}&nbsp;📝
         </div>
       </Link>
       <nav class="flex items-center gap-1 text-sm">
-        <Link href="/blog">blog</Link>
-        <span>
-          {`/`}
-        </span>
         <Link href="/categories">categories</Link>
         <span>
           {`/`}
