--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,30 +18,17 @@ const blog: CollectionEntry<"blog">[] = (await getCollection("blog"))
   <Container>
     <aside data-pagefind-ignore>
       <h1 class="font-semibold text-black dark:text-white">
-        Introducing Astro Micro 📝
+        Elevate Your Shopping Experience with Shopperqueries
       </h1>
       <div class="space-y-16">
         <section>
           <article class="space-y-4">
             <span>
               <p>
-                Astro Micro is an accessible theme for <Link
-                  href="https://astro.build/">Astro</Link
-                >. It's a fork of
-                <Link href="https://github.com/markhorn-dev">
-                  Mark Horn's
-                </Link> popular theme <Link
-                  href="https://astro.build/themes/details/astronano/"
-                  >Astro Nano</Link
-                >. Like Nano, Micro comes with zero frameworks installed.
+                Explore a new realm of shopping satisfaction with Shopperqueries, your trusted guide to elevated shopping experiences.
               </p>
               <p>
-                Micro adds features like <Link href="https://pagefind.app/"
-                  >Pagefind</Link
-                > for search, <Link href="https://giscus.app">Giscus</Link> for comments,
-                and more. For a full list of changes, see this <Link
-                  href="/blog/00-micro-changelog">blog post</Link
-                >.
+                From traveling to tech, we're here to transform your queries into seamless finds, ensuring every purchase is nothing short of perfect.
               </p>
             </span>
           </article>
