--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@ const blog: CollectionEntry<"blog">[] = (await getCollection("blog"))
 ---
 
 <Layout title={HOME.TITLE} description={HOME.DESCRIPTION}>
-  <script type="application/ld+json">
+  <script is:inline type="application/ld+json">
     {JSON.stringify({
       "@context": "https://schema.org",
       "@type": "WebSite",
@@ -39,7 +39,7 @@ const blog: CollectionEntry<"blog">[] = (await getCollection("blog"))
   </script>
 
   {blog.length > 0 && (
-    <script type="application/ld+json">
+    <script is:inline type="application/ld+json">
       {JSON.stringify({
         "@context": "https://schema.org",
         "@type": "ItemList",
