--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,12 @@
 ---
 import Layout from "@layouts/Layout.astro";
 import Container from "@components/Container.astro";
-import { SITE, HOME, SOCIALS } from "@consts";
 import ArrowCard from "@components/ArrowCard.astro";
 import Link from "@components/Link.astro";
 import { getCollection } from "astro:content";
 import type { CollectionEntry } from "astro:content";
+import type { Socials } from "@types";
+import { SITE, HOME, SOCIALS } from "@consts";
 
 const blog: CollectionEntry<"blog">[] = (await getCollection("blog"))
   .filter((post: CollectionEntry<"blog">) => !post.data.draft)
@@ -21,7 +22,7 @@ const blog: CollectionEntry<"blog">[] = (await getCollection("blog"))
       "@type": "WebSite",
       "name": "Shopperqueries",
       "url": "https://shopperqueries.com",
-      "description": "Explore a new realm of shopping satisfaction with Shopper Queries, your trusted guide to elevated shopping experiences.",
+      "description": "Explore a new realm of shopping satisfaction with Shopperqueries, your trusted guide to elevated shopping experiences.",
       "publisher": {
         "@type": "Organization",
         "name": "Shopperqueries",
@@ -87,7 +88,7 @@ const blog: CollectionEntry<"blog">[] = (await getCollection("blog"))
               <h2 class="mb-4 text-lg font-semibold text-black dark:text-white">
                 Recent Posts
               </h2>
-              <ul class="grid grid-cols-1 gap-4 sm:grid-cols-2">
+              <ul class="grid grid-cols-1 gap-4">
                 {blog.slice(0, SITE.NUM_POSTS_ON_HOMEPAGE).map((post: CollectionEntry<"blog">) => (
                   <li>
                     <ArrowCard entry={post} />
@@ -110,14 +111,14 @@ const blog: CollectionEntry<"blog">[] = (await getCollection("blog"))
           </article>
           <ul class="not-prose flex flex-wrap gap-2">
             {
-              SOCIALS.map((SOCIAL) => (
+              SOCIALS.map((social: Socials[number]) => (
                 <li class="flex gap-x-2 text-nowrap">
                   <Link
-                    href={SOCIAL.HREF}
+                    href={social.HREF}
                     external
-                    aria-label={`${SITE.TITLE} on ${SOCIAL.NAME}`}
+                    aria-label={`${SITE.TITLE} on ${social.NAME}`}
                   >
-                    {SOCIAL.NAME}
+                    {social.NAME}
                   </Link>
                   {"/"}
                 </li>
